# lib/db/src/schema/projects.ts
@@ -9,6 +9,8 @@ export const projectsTable = pgTable("projects", {
   changeLogic: text("change_logic"),
   changeStrategy: text("change_strategy"),
   managerName: text("manager_name"),
+  documentPath: text("document_path"),
+  documentName: text("document_name"),
   createdAt: timestamp("created_at").defaultNow().notNull(),
   updatedAt: timestamp("updated_at").defaultNow().notNull(),
 });
